<resources>
    <string name="app_name">Alexandria</string>
    <string name="nav_exchange">Exchange</string>
    <string name="nav_library">Library</string>
    <string name="nav_messages">Messages</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="login_error">Username or Password is Incorrect</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_hint">Author, Title, or ISBN</string>
    <string name="search">Search</string>
    <string name="nav_profile">Profile</string>
    <!-- Strings related to my profile -->
    <string name="profile_info">Information</string>
    <string name="image_desc">User Logo</string>
    <string name="profile_username">Username</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="sign_out_title">Sign Out</string>
    <!-- Strings related to edit my profile -->
    <string name="edit_profile_name">Full Name</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_password">Password</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_save">Save Changes</string>
    <!-- String related to sign up -->
    <string name="sign_up">Sign Up</string>
    <!-- String related to login -->
    <string name="login">Login</string>
    <!--Strings for User Book -->
    <string name="user_book_button_temp">Set Status Borrowed</string>
    <!-- Strings related to view user profile -->
    <string name="set_username">Set Username</string>
    <string name="name_background_desc">background</string>
    <string name="view_user_name">Full Name</string>
    <string name="view_user_available_books">Available Books</string>
    <string name="message_user_title">Message</string>
    <!-- Strings related to chat room -->
    <string name="joe_message">Joe Message</string>
    <string name="add_location_description">add_location</string>
    <string name="send_description">send_button</string>
    <string name="view_profile_title">View Profile</string>
    <string name="message_hint">Type your message</string>
    <!-- Strings related to map -->
    <string name="location">Send Location</string>
    <string name="save_pin">Save Pin Location</string>
    <string name="place_pin">Place A Pin</string>
    <!-- Strings related to book catalogue -->
    <string name="bc_owners">Availability</string>
    <string name="isbn">ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <!-- Strings related to my book -->
    <string name="my_book_requests">Requests</string>
    <string name="my_book_order">Order</string>
    <!-- Strings related to ellipses menu -->
    <string name="view_user">View User</string>
    <string name="message">Message</string>
    <!-- Strings related to add new book -->
    <string name="add_a_book">Add a Book</string>
    <string name="book_title">Book Title</string>
    <string name="author_name">Author Name</string>
    <string name="ISBN_num">ISBN #</string>
    <string name="add_to_library">Add to Library</string>
    <string name="edit_book">Edit Book</string>
    <string name="delete_book">Delete Book</string>
    <!-- Strings related to book exchange -->
    <string name="cancel_order">Cancel Order</string>
    <string name="set_borrowed">Set Status: Borrowed</string>
    <string name="accept_return">Accept Return</string>
    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Decline Request</string>
    <string name="edit_book_save">Save Changes</string>
    <string name="isbn_scanner">ISBN Scanner</string>
    <!-- Strings related to photo options -->
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="view_image_title">View Image</string>
    <!-- Strings related to empty lists -->
    <string name="empty_exchange">Looks like there are no books here\nCheck Back Later</string>
    <string name="empty_requests">Looks like there are no books here\nSearch Books to Request</string>
    <string name="empty_library">Looks like you haven\'t added any books\nAdd Books to see them here</string>
    <string name="empty_users">Can\'t find any Requests\nCheck Back Later</string>
</resources>
